# mini-obs-platform

./: .gitattributes  .gitignore  README.md  package-lock.json
.github/workflows/: cd.yaml  ci.yaml
apps/frontend-svc/: .env.example  Dockerfile  go.mod  go.sum  handler.go  handler_test.go  main.go  otel.go
apps/inventory-svc/: .env.example  Dockerfile  main.py  metrics.py  otel_setup.py  pyproject.toml  requirements.txt
apps/inventory-svc/tests/: conftest.py  test_integration.py  test_unit.py
apps/order-svc/: .env.example  Dockerfile  main.py  metrics.py  otel_setup.py  pyproject.toml  requirements.txt
apps/order-svc/tests/: conftest.py  test_integration.py  test_unit.py
apps/portal/: Dockerfile  index.html  nginx.conf
docs/: DEVELOPMENT.md  FUNCTIONAL-SPEC.md  INSTANA-MAPPING.md  INTERVIEW.md  TEST-REPORT.md  TROUBLESHOOTING.md  api-spec.json  api-spec.md  data-model.json  data-model.md  dev-plan.md  flow-validation-report.md  ideation-decisions.md  ideation-research.md  lessons-backend.md  lessons-frontend.md  lessons-qa.md  qa-report.md  requirements-validation-report.md  requirements.example.md  requirements.md  service-flow.md
infra/argocd/: app-of-apps.yaml
infra/argocd/apps/: chaos-mesh.yaml  fluent-bit.yaml  jaeger.yaml  kube-prometheus-stack.yaml  loki.yaml  otel-collector.yaml  sample-apps.yaml
infra/helm/chaos-mesh/: values.yaml
infra/manifests/: namespace.yaml
scripts/: capture-screenshots.mjs  deploy-all.sh  e2e-test.sh  kind-config.yaml  load-images.sh  port-forward.sh  run-chaos.sh  setup-cluster.sh  teardown-cluster.sh
(+19 files in other folders)
